--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 		This is the home page for the Members Only application.
 	</h2>
 
-	<%= link_to "Sign up!", '#', class: "btn btn-lg btn-primary" %>
+	<%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 
