--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -102,11 +102,48 @@ footer {
 
 
 /* images */ 
-img {
+.welcome {
 	width: 400px;
 	border-radius: 20px;
 	border: 8px solid black;
 	&:hover {
 		border: 8px solid darkslategray;
+	}
+}
+
+.gravatar {
+	float: left;
+	margin-right: 10px;
+}
+
+.gravatar_edit {
+	margin-top: 15px;
+}
+
+/* sidebar */ 
+
+aside {
+	section.user_info {
+		margin-top: 20px;
+	}
+	section {
+		padding: 10px 0;
+		margin-top: 20px;
+		&:first-child {
+			border: 0;
+			padding-top: 0;
+		}
+		span {
+			display: block;
+			margin-bottom: 3px;
+			line-height: 1;
+		}
+		h1 {
+			font-size: 1.4em;
+			text-align: left;
+			letter-spacing: -1px;
+			margin-bottom: 3px;
+			margin-top: 0px;
+		}
 	}
 }
