--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Home") %>
 <div class="center jumbotron">
 	<%# <h1>Members Only App</h1> %>
-	<%= link_to image_tag("members_only.jpg", alt: "Site logo"), '#' %>	
+	<%= link_to image_tag("members_only.jpg", alt: "Site logo", class: "welcome"), '#' %>	
 	<h2>
 		This is the home page for the Members Only application.
 	</h2>
