--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,5 +2,6 @@
 <h1>About</h1>
 <p>
 	The Members Only application is a Ruby on Rails project from 
-	The Odin Project's <a href="https://www.theodinproject.com">curriculum</a>
+	The Odin Project's <a href="https://www.theodinproject.com">curriculum</a><br>
+	and is structured based on <a href="https://www.railstutorial.org">The Ruby on Rails Tutorial</a>.
 </p>
