Add files for the members only app

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-	  The Members Only application by Braxton Lemmon
+	  The Members Only application by <a href="http://github.com/emmanuelkamala">emmanuelkamala</a> and <a href="http://github.com/zibilyonik">zibilyonik</a>
 	</small>
 	<nav>
 	  <ul>
