--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,7 +2,8 @@
 <h1>Contact</h1>
 
 <address>
-  <a href="mailto:braxtonlemmon@gmail.com">Contact</a> 
-	the author of this site.
+  This simple app has been built by: <br>
+  <a href="https://github.com/emmanuelkamala">Emmanuel Kamala</a><br>
+  <a href="https://github.com/Zibilyonik">Onur Surmeli</a>
 </address>
 	
