--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,11 @@
 <% provide(:title, "Home") %>
 <div class="center jumbotron">
 	<%# <h1>Members Only App</h1> %>
-	<%= link_to image_tag("members_only.jpg", alt: "Site logo", class: "welcome"), 
+	<%= link_to image_tag("members-only.png", alt: "Site logo", class: "welcome"), 
 												about_path %>	
 	<h2>
-		This is the home page for the Members Only application.
+		Welcome to the Members Only App. To view who posted a post, <br>
+		please <%= link_to "Log in", login_path %> or sign up if you are not a member.
 	</h2>
 
 	<%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
